blockml/test/valid/05_calc_refs_mea/v13/v13m.model
model: v13m
joins:
- from_view: v13_one
  as: a

fields:
- calculation: calc1
  sql: ${mea2} + ${mea3}

- measure: mea2
  type: sum_by_key
  sql: ${a.dim2} + 100
  sql_key: ${a.dim4} + 200



- measure: mea3
  type: min
  sql: ${dim1}

- dimension: dim1
  sql: 555  
